--- a/Dati.tex
+++ b/Dati.tex
@@ -8,36 +8,34 @@
 % 	USER DATA
 %----------------------------------------------------------------------------------------
 
-% Data di approvazione del piano da parte del tutor interno; nel formato GG Mese AAAA
-% compilare inserendo al posto di GG 2 cifre per il giorno, e al posto di 
-% AAAA 4 cifre per l'anno
+% Data di approvazione del piano da parte del tutor interno; nel formato GG/MM/AAAA
 \newcommand{\dataApprovazione}{Data}
 
 % Dati dello Studente
-\newcommand{\nomeStudente}{Pinco}
-\newcommand{\cognomeStudente}{Pallino}
-\newcommand{\matricolaStudente}{1000000}
-\newcommand{\emailStudente}{mail@studenti.unipd.it}
-\newcommand{\telStudente}{+ 39 000 00 00 000}
+\newcommand{\nomeStudente}{Alberto}
+\newcommand{\cognomeStudente}{Gobbo}
+\newcommand{\matricolaStudente}{1170556}
+\newcommand{\emailStudente}{alberto.gobbo.5@studenti.unipd.it}
+\newcommand{\telStudente}{+ 39 3421741422}
 
 % Dati del Tutor Aziendale
-\newcommand{\nomeTutorAziendale}{nomeTutor}
-\newcommand{\cognomeTutorAziendale}{cognomeTutor}
-\newcommand{\emailTutorAziendale}{mail@mail.it}
-\newcommand{\telTutorAziendale}{+ 39 000 00 00 000}
-\newcommand{\ruoloTutorAziendale}{}
+\newcommand{\nomeTutorAziendale}{Marco}
+\newcommand{\cognomeTutorAziendale}{Bortolin}
+\newcommand{\emailTutorAziendale}{m.bortolin@hunext.com}
+\newcommand{\telTutorAziendale}{+ 39 0422 633882}
+\newcommand{\ruoloTutorAziendale}{Software Project Manager}
 
 % Dati dell'Azienda
-\newcommand{\ragioneSocAzienda}{Azienda S.p.A}
-\newcommand{\indirizzoAzienda}{Via Roma 1, Roma (RM)}
-\newcommand{\sitoAzienda}{http://example.com/}
-\newcommand{\emailAzienda}{mail@mail.it}
-\newcommand{\partitaIVAAzienda}{P.IVA 12345678999}
+\newcommand{\ragioneSocAzienda}{Hunext Software S.r.l.}
+\newcommand{\indirizzoAzienda}{Via A. Volta, 23~-~31030 Casier (TV)}
+\newcommand{\sitoAzienda}{www.hunext.com}
+\newcommand{\emailAzienda}{software@hunext.com}
+\newcommand{\partitaIVAAzienda}{P.IVA 04505810269}
 
 % Dati del Tutor Interno (Docente)
 \newcommand{\titoloTutorInterno}{Prof.}
-\newcommand{\nomeTutorInterno}{NomeDocente}
-\newcommand{\cognomeTutorInterno}{CognomeDocente}
+\newcommand{\nomeTutorInterno}{Luigi}
+\newcommand{\cognomeTutorInterno}{De Giovanni}
 
 \newcommand{\prospettoSettimanale}{
      % Personalizzare indicando in lista, i vari task settimana per settimana
@@ -51,31 +49,31 @@
             \item Presa visione dell’infrastruttura esistente;
             \item Formazione sulle tecnologie adottate;
         \end{itemize}
-        \item \textbf{Seconda Settimana - Sottotitolo (XX ore)} 
+        \item \textbf{Seconda Settimana~-~Sottotitolo (XX ore)} 
         \begin{itemize}
             \item ;
         \end{itemize}
-        \item \textbf{Terza Settimana - Sottotitolo (XX ore)} 
+        \item \textbf{Terza Settimana~-~Sottotitolo (XX ore)} 
         \begin{itemize}
             \item ;
         \end{itemize}
-        \item \textbf{Quarta Settimana - Sottotitolo (XX ore)} 
+        \item \textbf{Quarta Settimana~-~Sottotitolo (XX ore)} 
         \begin{itemize}
             \item ;
         \end{itemize}
-        \item \textbf{Quinta Settimana - Sottotitolo (XX ore)} 
+        \item \textbf{Quinta Settimana~-~Sottotitolo (XX ore)} 
         \begin{itemize}
             \item ;
         \end{itemize}
-        \item \textbf{Sesta Settimana - Sottotitolo (XX ore)} 
+        \item \textbf{Sesta Settimana~-~Sottotitolo (XX ore)} 
         \begin{itemize}
             \item ;
         \end{itemize}
-        \item \textbf{Settima Settimana - Sottotitolo (XX ore)} 
+        \item \textbf{Settima Settimana~-~Sottotitolo (XX ore)} 
         \begin{itemize}
             \item ;
         \end{itemize}
-        \item \textbf{Ottava Settimana - Conclusione (XX ore)} 
+        \item \textbf{Ottava Settimana~-~Conclusione (XX ore)} 
         \begin{itemize}
             \item ;
         \end{itemize}
