--- a/PianoDiLavoro.tex
+++ b/PianoDiLavoro.tex
@@ -1,11 +1,3 @@
-% -----------------------------------------------------------------------------------------
-%                   CREDITI 
-%   Template originale di Michele Caovilla (Mich)
-%   Rivisitazione completa del template da parte di Riccardo Montagnin
-%   Modifiche al frontespizio, al pié di pagina, modularità 
-%   Prospetto settimanale, indicazioni varie Federico Silvio Busetto
-% -----------------------------------------------------------------------------------------
-
 \input{Template/Layout.tex}
 \input{Dati.tex}
 
@@ -14,10 +6,10 @@
     \input{Template/Sezioni/Contatti.tex}
     \input{Template/Sezioni/ScopoStage.tex}
     \input{Template/Sezioni/InterazioneStudenteTutor.tex}
-    \input{Template/Sezioni/Prodotti.tex}
+    % \input{Template/Sezioni/Prodotti.tex}
     \input{Template/Sezioni/ContenutiFormativi.tex}
     \input{Template/Sezioni/PianificazioneLavoro.tex}
     \input{Template/Sezioni/Obiettivi.tex}
-    \input{Template/Sezioni/Diagramma.tex}
-    \input{Template/Sezioni/Approvazione.tex}
+    % \input{Template/Sezioni/Diagramma.tex}
+    % \input{Template/Sezioni/Approvazione.tex}
 \end{document}
