aggiorna piano di lavoro in data 14/05/2020

--- a/PianoDiLavoro.tex
+++ b/PianoDiLavoro.tex
@@ -6,7 +6,7 @@
     \input{Template/Sezioni/Contatti.tex}
     \input{Template/Sezioni/ScopoStage.tex}
     \input{Template/Sezioni/InterazioneStudenteTutor.tex}
-    % \input{Template/Sezioni/Prodotti.tex}
+    \input{Template/Sezioni/ProdottiAttesi.tex}
     \input{Template/Sezioni/ContenutiFormativi.tex}
     \input{Template/Sezioni/PianificazioneLavoro.tex}
     \input{Template/Sezioni/Obiettivi.tex}
