--- a/Template/Layout.tex
+++ b/Template/Layout.tex
@@ -18,6 +18,7 @@
 \usepackage{lastpage}
 \usepackage{graphicx}
 \usepackage{tabularx}
+\usepackage{fancyvrb,cprotect}
 
 % Comando per le firme, per aggiungere dei campi Data, decommentare le due righe sotto
 \newcommand*{\SignatureAndDate}[1]{%
@@ -132,10 +133,10 @@ footskip=10pt
 %   FOOTER STYLE
 %-----------------------------------------------------------------------------------------
 
-%***PIÈ DI PAGINA***
+%***PIÃˆ DI PAGINA***
 %\lfoot{\includegraphics[keepaspectratio = true, width = 25px] {img/UniPd.png} \textit{\nomeStudente 
 %\cognomeStudente (\matricolaStudente)}\\ \footnotesize{\emailStudente}}
 %\rfoot{\thepage/\pageref{LastPage}} %per le prime pagine: mostra solo il numero romano
 
     
-\renewcommand{\footrulewidth}{0.4pt}   %Linea sopra il piè di pagina
+\renewcommand{\footrulewidth}{0.4pt}   %Linea sopra il piÃ¨ di pagina
