--- a/Template/Sezioni/ContenutiFormativi.tex
+++ b/Template/Sezioni/ContenutiFormativi.tex
@@ -1,4 +1,13 @@
 \section*{Contenuti formativi previsti}
 % Personalizzare indicando le tecnologie e gli ambiti di interesse dello stage
-Durante questo progetto di stage lo studente avrà occasione di approfondire le sue conoscenze nell'ambito ... .
+Durante questo progetto di stage lo studente avrà l'occasione di approfondire le sue conoscenze in questi ambiti:
+\begin{itemize}
+    \item Sviluppo software C\#.
+    \item Sviluppo mobile con Xamarin.
+    \item Piattaforme Cloud.
+    \item Utilizzo di Markdown per la scrittura della documentazione.
+    \item Metodologia \textit{Agile} applicata nel ciclo produttivo della azienda.
+    \item Utilizzo di strumenti di gestione del controllo del codice sorgente e delle attività (Git and Azure DevOps) utilizzati in azienda.
+\end{itemize}
+
 \newpage
