--- a/Template/Sezioni/InterazioneStudenteTutor.tex
+++ b/Template/Sezioni/InterazioneStudenteTutor.tex
@@ -2,6 +2,15 @@
 %	DESCRIPTION OF THE INTERACTION BETWEEN THE STUDENT AND THE INTERNAL TUTOR
 %----------------------------------------------------------------------------------------
 \section*{Interazione tra studente e tutor aziendale}
-% Personalizzare definendo le modalità di interazione col tutor aziendale
+% Personalizzare definendo le modalitÃ  di interazione col tutor aziendale
 
-Regolarmente, (almeno una volta la settimana) ci saranno incontri diretti con il tutor aziendale \nomeTutorAziendale\ \cognomeTutorAziendale\ e stakeholders per verificare lo stato di avanzamento, chiarire eventualmente gli obiettivi, affinare la ricerca e aggiornare il piano stesso di lavoro.
+Gli incontri tra lo studente e il tutor aziendale \nomeTutorAziendale\ \cognomeTutorAziendale\ (compresi gli stakeholder) saranno regolari. Le finalità degli incontri sono volte all'aiuto dello studente in caso di necessità e per verificare lo stato di avanzamento del progetto, chiarire eventualmente gli obiettivi, affinare la ricerca e aggiornare il piano di lavoro stesso.
+
+In relazione all'emergenza Covid-19, le modalità di interazione tra lo studente e il tutor aziendale \nomeTutorAziendale\ \cognomeTutorAziendale\ possono avvenire in due modi:
+\begin{itemize}
+    \item tramite Microsoft Teams, nel caso in cui lo stage venga gestito tramite Smart Working.
+    \item fisicamente in sede, ma con la garanzia dell'applicazione delle regole di distanziamento sociale.
+\end{itemize}
+E' possibile alternare attività di Smart Working alle attività in sede.
+
+\newpage
