--- a/Template/Sezioni/ScopoStage.tex
+++ b/Template/Sezioni/ScopoStage.tex
@@ -3,7 +3,8 @@
 %----------------------------------------------------------------------------------------
 \section*{Scopo dello stage}
 % Personalizzare inserendo lo scopo dello stage, cioè una breve descrizione
-Lo scopo di questo progetto di stage è ... .
 
-Lo studente avrà il compito di ... .
+Lo scopo di questo progetto di stage è implementare un sistema di notifiche push per gestire le comunicazioni aziendali in un'applicazione mobile nativa di \textit{Hunext Software}, scritta nel linguaggio multipiattaforma Xamarin, per la gestione delle risorse umane.
+
+Lo studente avrà il compito di produrre un Proof Of Concept (POC) e la relativa documentazione per soddisfare gli obiettivi del progetto di stage.
 
