--- a/Dati.tex
+++ b/Dati.tex
@@ -40,63 +40,78 @@
 \newcommand{\prospettoSettimanale}{
      % Personalizzare indicando in lista, i vari task settimana per settimana
      % sostituire a XX il totale ore della settimana
+     Il piano di lavoro è strutturato in 3 fasi:
     \begin{itemize}
-        \item \textbf{Prima Settimana (XX ore)}
+        % \item \textbf{Prima Settimana (XX ore)}
+        % \begin{itemize}
+        %     \item Incontro con persone coinvolte nel progetto per discutere i requisiti e le richieste
+        %     relativamente al sistema da sviluppare;
+        %     \item Verifica credenziali e strumenti di lavoro assegnati;
+        %     \item Presa visione dellâ€™infrastruttura esistente;
+        %     \item Formazione sulle tecnologie adottate;
+        % \end{itemize}
+        % \item \textbf{Seconda Settimana~-~Sottotitolo (XX ore)} 
+        % \begin{itemize}
+        %     \item ;
+        % \end{itemize}
+        % \item \textbf{Terza Settimana~-~Sottotitolo (XX ore)} 
+        % \begin{itemize}
+        %     \item ;
+        % \end{itemize}
+        % \item \textbf{Quarta Settimana~-~Sottotitolo (XX ore)} 
+        % \begin{itemize}
+        %     \item ;
+        % \end{itemize}
+        % \item \textbf{Quinta Settimana~-~Sottotitolo (XX ore)} 
+        % \begin{itemize}
+        %     \item ;
+        % \end{itemize}
+        % \item \textbf{Sesta Settimana~-~Sottotitolo (XX ore)} 
+        % \begin{itemize}
+        %     \item ;
+        % \end{itemize}
+        % \item \textbf{Settima Settimana~-~Sottotitolo (XX ore)} 
+        % \begin{itemize}
+        %     \item ;
+        % \end{itemize}
+        % \item \textbf{Ottava Settimana~-~Conclusione (XX ore)} 
+        % \begin{itemize}
+        %     \item ;
+        % \end{itemize}
+        \item \textbf{Fase 1}
         \begin{itemize}
-            \item Incontro con persone coinvolte nel progetto per discutere i requisiti e le richieste
-            relativamente al sistema da sviluppare;
-            \item Verifica credenziali e strumenti di lavoro assegnati;
-            \item Presa visione dell’infrastruttura esistente;
-            \item Formazione sulle tecnologie adottate;
+            \item Studio e formazione su C\# e Xamarin.
+            \item Studio sulle soluzioni Cloud per la gestione delle Push Notification.
+            \item Formazione sui tool aziendali utilizzati per la gestione dello sviluppo in team.
         \end{itemize}
-        \item \textbf{Seconda Settimana~-~Sottotitolo (XX ore)} 
+        \item \textbf{Fase 2}
         \begin{itemize}
-            \item ;
+            \item Approfondimento della piattaforma Cloud da integrare nella Mobile App per la gestione delle push notification.
+            \item Formazione sul backend della soluzione software collegata alla Mobile App.
+            \item Creazione di un progetto di test per la sperimentazione delle Push Notification tramite Xamarin.
         \end{itemize}
-        \item \textbf{Terza Settimana~-~Sottotitolo (XX ore)} 
+        \item \textbf{Fase 3}
         \begin{itemize}
-            \item ;
-        \end{itemize}
-        \item \textbf{Quarta Settimana~-~Sottotitolo (XX ore)} 
-        \begin{itemize}
-            \item ;
-        \end{itemize}
-        \item \textbf{Quinta Settimana~-~Sottotitolo (XX ore)} 
-        \begin{itemize}
-            \item ;
-        \end{itemize}
-        \item \textbf{Sesta Settimana~-~Sottotitolo (XX ore)} 
-        \begin{itemize}
-            \item ;
-        \end{itemize}
-        \item \textbf{Settima Settimana~-~Sottotitolo (XX ore)} 
-        \begin{itemize}
-            \item ;
-        \end{itemize}
-        \item \textbf{Ottava Settimana~-~Conclusione (XX ore)} 
-        \begin{itemize}
-            \item ;
+            \item Sviluppo di un POC con Xamarin per l’integrazione della Mobile App con la piattaforma Cloud di gestione delle Push Notification.
+            \item Documentazione di progetto.
         \end{itemize}
     \end{itemize}
 }
 
 % Indicare il totale complessivo (deve essere compreso tra le 300 e le 320 ore)
-\newcommand{\totaleOre}{}
+\newcommand{\totaleOre}{320}
 
 \newcommand{\obiettiviObbligatori}{
-	 \item \underline{\textit{O01}}: primo obiettivo;
-	 \item \underline{\textit{O02}}: secondo obiettivo;
-	 \item \underline{\textit{O03}}: terzo obiettivo;
-	 
+     \item \underline{\textit{O01}}: Studio delle possibili piattaforme Cloud per la gestione delle Push Notification.  
+	 \item \underline{\textit{O02}}: Selezione della piattaforma Cloud che ai requisiti della Mobile App e dal dominio applicativo specifico.
+	 \item \underline{\textit{O03}}: Sperimentazione dell'integrazione con la Mobile App in Xamarin.
+	 \item \underline{\textit{O04}}: Sviluppo di un POC di gestione delle Push Notification all'interno della Mobile App. 
 }
 
 \newcommand{\obiettiviDesiderabili}{
-	 \item \underline{\textit{D01}}: primo obiettivo;
-	 \item \underline{\textit{D02}}: secondo obiettivo;
+    \item Nessun obiettivo desiderabile.
 }
 
 \newcommand{\obiettiviFacoltativi}{
-	 \item \underline{\textit{F01}}: primo obiettivo;
-	 \item \underline{\textit{F02}}: secondo obiettivo;
-	 \item \underline{\textit{F03}}: terzo obiettivo;
+    \item Nessun obiettivo facoltativo.
 }
