--- a/Template/Sezioni/Obiettivi.tex
+++ b/Template/Sezioni/Obiettivi.tex
@@ -6,13 +6,11 @@
 Si farà riferimento ai requisiti secondo le seguenti notazioni:
 \begin{itemize}
 	\item \textit{O} per i requisiti obbligatori, vincolanti in quanto obiettivo primario richiesto dal committente;
-	\item \textit{D} per i requisiti desiderabili, non vincolanti o strettamente necessari,
-		  ma dal riconoscibile valore aggiunto;
-	\item \textit{F} per i requisiti facoltativi, rappresentanti valore aggiunto non strettamente 
-		  competitivo.
+	\item \textit{D} per i requisiti desiderabili, non vincolanti o strettamente necessari, ma dal riconoscibile valore aggiunto;
+	\item \textit{F} per i requisiti facoltativi, rappresentanti valore aggiunto non strettamente competitivo.
 \end{itemize}
 
-Le sigle precedentemente indicate saranno seguite da una coppia sequenziale di numeri, identificativo del requisito.
+Le sigle precedentemente indicate saranno seguite da un numero incrementale formato da due cifre che parte da 01, che funge da identificativo del requisito.
 
 \subsection*{Obiettivi fissati}
 Si prevede lo svolgimento dei seguenti obiettivi:
