correggi piano di lavoro in data 19/05/20

--- a/Dati.tex
+++ b/Dati.tex
@@ -104,14 +104,14 @@
 \newcommand{\obiettiviObbligatori}{
      \item \underline{\textit{O01}}: Studio delle possibili piattaforme Cloud per la gestione delle Push Notification.  
 	 \item \underline{\textit{O02}}: Selezione della piattaforma Cloud che ai requisiti della Mobile App e dal dominio applicativo specifico.
-	 \item \underline{\textit{O03}}: Sperimentazione dell'integrazione con la Mobile App in Xamarin.
-	 \item \underline{\textit{O04}}: Sviluppo di un POC di gestione delle Push Notification all'interno della Mobile App. 
+	 \item \underline{\textit{O03}}: Sperimentazione dell'integrazione della piattaforma Cloud con la Mobile App in Xamarin.
 }
 
 \newcommand{\obiettiviDesiderabili}{
-    \item Nessun obiettivo desiderabile.
+    \item \underline{\textit{D01}}: Sviluppo di un POC di gestione delle Push Notification all'interno della Mobile App.
+    \item \underline{\textit{D02}}: Sviluppo di un POC per la pubblicazione delle Push Notification dal backend.
 }
 
 \newcommand{\obiettiviFacoltativi}{
-    \item Nessun obiettivo facoltativo.
+    \item \underline{\textit{F01}}: Sviluppo di una strategia di gestione dei TAG per identificare l'utente destinatario della notifica.
 }
