--- a/Template/Tabelle/tabellaRipartizioneOre.tex
+++ b/Template/Tabelle/tabellaRipartizioneOre.tex
@@ -1,9 +1,9 @@
 
-% Tabella da personalizzare in base alle ore delle attività
+% Tabella da personalizzare in base alle ore delle attivitÃ 
 
 \begin{tabularx}{\textwidth}{|c|X|}
 	% \hline
-	% \textbf{Durata in ore} & \textbf{Descrizione dell'attività} \\\hline
+	% \textbf{Durata in ore} & \textbf{Descrizione dell'attivitÃ } \\\hline
 	
 	% \textbf{38} & \textbf{Formazione sulle tecnologie} \\	 
     % \hline
@@ -33,15 +33,31 @@
     % \textbf{Totale ore} & \multicolumn{1}{|c|}{\textbf{\totaleOre}} \\\hline
 
     \hline
-    \textbf{Numero fase} & \textbf{Durata in ore} \\\hline
+    \textbf{Durata in ore} & \textbf{Descrizione delle attività} \\\hline
     
-    Fase 1 & \textbf{90} \\	 
+    \multirow{3}{0cm}\\ 
+    \textit{30} & 
+    Studio e formazione su C\# e Xamarin \\
+    \textit{30} & 
+    Studio sulle soluzioni Cloud per la gestione delle Push Notification \\
+    \textit{30} & 
+    Formazione sui tool aziendali utilizzati per la gestione dello sviluppo in team \\
     \hline
 
-    Fase 2 & \textbf{100} \\	 
+    \multirow{3}{0cm}\\ 
+    \textit{30} & 
+    Approfondimento della piattaforma Cloud da integrare nella Mobile App per la gestione delle push notification \\
+    \textit{30} & 
+    Formazione sul backend della soluzione software collegata alla Mobile App \\
+    \textit{40} & 
+    Creazione di un progetto di test per la sperimentazione delle Push Notification tramite Xamarin \\
     \hline
 
-    Fase 3 & \textbf{130} \\	 
+    \multirow{2}{0cm}\\ 
+    \textit{100} & 
+    Sviluppo di un POC con Xamarin per l'integrazione della Mobile App con la piattaforma Cloud di gestione delle Push Notification \\
+    \textit{30} & 
+    Documentazione di progetto \\
     \hline
 
     \textbf{Totale ore} & \textbf{\totaleOre} \\\hline
